Se cambio el logo de la web

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <nav class="nav position-absolute p-5 justify-content-between w-100">
-            <a href="" class="brand"><img src="images/Logo_Navbar.png" class="img-fluid" alt=""></a>
+            <a href="" class="brand"><img src="images/bubalus_logo.png" class="img-fluid" alt=""></a>
             <div class="icon_menu">
                 <img src="images/Icon_Menu.png" class="img-fluid" alt="">
             </div>
@@ -105,8 +105,8 @@
         </section>
         <footer>
             <div class="row">
-                <div class="col-md-4 p-0">
-                    <img src="images/Logo_Footer.jpg" class="img-fluid" alt="">
+                <div class="col-md-4 p-5 bg-white">
+                    <img src="images/bubalus_logo.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-8 d-flex flex-column justify-content-center align-items-center py-5 py-md-0">
                     <p class="text-white text-center">BARRABAS DERECHOS RESERVADOS</p>
