Se cambio el titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/style.css">
 
 
-        <title>Barrabas</title>
+        <title>Bubalus | Espacio creativo</title>
     </head>
 
     <body>
