--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="images/mano-responsive.png" class="img-fluid mano-responsive d-block d-lg-none" alt="">
         </section>
         <section class="proyectos py-4">
-            <div class="row px-3 px-md-0 bg-danger align-items-center">
+            <div class="row px-3 px-md-0 align-items-center">
                 <div class="col-lg-4 p-0">
                     <h2 class="text-center title"><span>GALERÍA</span> PROYECTOS</h2>
                 </div>
