Se agrego un boton diferente para el next del carrusel de proyectos

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <div> <img src="images/img_carrusel10.png" class="img-fluid" alt=""></div>
                     </div>
                     <div class="btns">
-                        <div class="customNextBtnproyectos"><img src="images/Next.png" class="img-fluid icon_next"
-                                alt=""></div>
+                        <div class="customNextBtnproyectos"><img src="images/Next_proyectos.png"
+                                class="img-fluid icon_next" alt=""></div>
                     </div>
                 </div>
             </div>
