Se cambio el nombre de barrabas por bubalus en el footer

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <img src="images/bubalus_logo.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-8 d-flex flex-column justify-content-center align-items-center py-5 py-md-0">
-                    <p class="text-white text-center">BARRABAS DERECHOS RESERVADOS</p>
+                    <p class="text-white text-center">BUBALUS DERECHOS RESERVADOS</p>
                     <a href="" class="text-center d-block text-white">AVISO DE PRIVACIDAD</a>
                 </div>
             </div>
